--- a/styles.css
+++ b/styles.css
@@ -188,17 +188,24 @@ body {
     .container {
         width: 70%;
     }
+	/* .cards {
+        grid-template-columns: repeat(3, 0.5fr);
+    } */
     .title {
-        font-size: 2.5rem; 
+        font-size: 3.5rem; 
     }
 }
 
 @media only screen and (max-width: 768px) {
-    .cards {
-        grid-template-columns: repeat(3, 1fr);
+	.container {
+        width: 90%;
     }
+    .cards {
+        grid-template-columns: repeat(4, 0.5fr);
+    }
+	
     .title {
-        font-size: 2rem; 
+        font-size: 2.5rem; 
     }
 }
 @media (max-width: 650px) {
@@ -212,6 +219,12 @@ body {
 }
 
 @media only screen and (max-width: 500px) {
+	.title {
+        font-size: 2.7rem; 
+    }
+	.desc{
+		font-size: 16px;
+	}
     .cards {
         grid-template-columns: repeat(3, 1fr); 
         gap: 15px;
@@ -222,6 +235,13 @@ body {
         max-width: 100%; 
         margin: auto; 
     }
+	.card .front-view img {
+		width: 25px;
+		
+	}
+	.card .back-view img {
+		max-width: 50px;
+	}
 	.timer{
 		font-size: 1.2rem;
 	}
